--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 
+server.port=8087
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.show-sql=true
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+
+
+
+spring.datasource.username=pg
+spring.datasource.password=pg
+
+spring.sql.init.mode=always
+spring.datasource.initialize=true
+spring.sql.init.continue-on-error=true
+spring.jpa.hibernate.ddl-auto=update
+
