--- a/docker/psql/Dockerfile
+++ b/docker/psql/Dockerfile
@@ -1,7 +1,4 @@
 FROM postgres
 
-COPY psql_tables.sql /psql-tables.sql
-
-RUN sleep 1m
-
-RUN psql -h localhost -U pg -d postgres -a -f /psql-tables.sql
+COPY --chown=root:root psql_tables.sql /psql-tables.sql
+COPY --chown=root:root psql-create.sh /psql-create.sh
